--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #f5f1e6;
+    background-color: #000000;
     display: flex;
     justify-content: center;
     align-items: center;
